--- a/src/app/modules/loan-utilization/search-loan-uti/search-loan-uti.component.html
+++ b/src/app/modules/loan-utilization/search-loan-uti/search-loan-uti.component.html
@@ -208,19 +208,19 @@
                         <mat-cell *matCellDef="let loanutilization">{{loanutilization.BranchCode}}</mat-cell>
                     </ng-container>
 
-                    <ng-container matColumnDef="Gl">
-                        <mat-header-cell *matHeaderCellDef mat-sort-header>Gl</mat-header-cell>
-                        <mat-cell *matCellDef="let loanutilization">{{loanutilization.Gl}}</mat-cell>
+                    <ng-container matColumnDef="GlSubCode">
+                        <mat-header-cell *matHeaderCellDef mat-sort-header>Gl Sub Code</mat-header-cell>
+                        <mat-cell *matCellDef="let loanutilization">{{loanutilization.GlSubCode}}</mat-cell>
                     </ng-container>
-
                     <ng-container matColumnDef="SchemeCode">
                         <mat-header-cell *matHeaderCellDef mat-sort-header>Scheme code</mat-header-cell>
                         <mat-cell *matCellDef="let loanutilization">{{loanutilization.SchemeCode}}</mat-cell>
                     </ng-container>
 
-                    <ng-container matColumnDef="Cropcode">
+
+                    <ng-container matColumnDef="CropCode">
                         <mat-header-cell *matHeaderCellDef mat-sort-header>Crop code</mat-header-cell>
-                        <mat-cell *matCellDef="let loanutilization">{{loanutilization.Cropcode}}</mat-cell>
+                        <mat-cell *matCellDef="let loanutilization">{{loanutilization.CropCode}}</mat-cell>
                     </ng-container>
 
                     <ng-container matColumnDef="LoanCaseNo">
