--- a/src/app/modules/report-managment/apilogs-list/apilogs-list.component.html
+++ b/src/app/modules/report-managment/apilogs-list/apilogs-list.component.html
@@ -6,18 +6,20 @@
         </div>
         <div class="col-lg-4 col-sm-12 self-center">
             <p class="text-right">
-                <button class="  py-2 mat-focus-indicator mat-flat-button mat-button-base mat-primary" type="button" color="primary" data-bs-toggle="collapse" data-bs-target="#collapseExample" aria-expanded="false" aria-controls="collapseExample">
-                    <mat-icon class="mr-2">filter_list</mat-icon> Advance Filter
+                <button class="  py-2 mat-focus-indicator mat-flat-button mat-button-base mat-primary" type="button"
+                        color="primary" data-bs-toggle="collapse" data-bs-target="#collapseExample"
+                        aria-expanded="false" aria-controls="collapseExample">
+                    <mat-icon class="mr-2">filter_list</mat-icon>
+                    Advance Filter
                 </button>
-              </p>
+            </p>
         </div>
     </div>
 
     <!-- Header -->
 
 
-
-      <div class="collapse" id="collapseExample">
+    <div class="collapse" id="collapseExample">
         <div class="card card-body">
             <div class="" [formGroup]="FilterForm">
 
@@ -39,17 +41,18 @@
                                 <mat-label>Choose start date</mat-label>
                                 <input matInput [matDatepicker]="picker1" formControlName="StartDate"
                                        (dateChange)="comparisonStartdateValidator()" autocomplete="off">
-        
+
                                 <mat-datepicker-toggle matSuffix [for]="picker1"></mat-datepicker-toggle>
-        
+
                                 <mat-datepicker #picker1></mat-datepicker>
-        
+
                                 <mat-error *ngIf="FilterForm.controls['StartDate'].hasError('invaliddaterange')">
                                     <strong>Start date cannot be greater than end date</strong>
                                 </mat-error>
-                                <mat-error *ngIf="hasError('StartDate', 'required')">Start Date <strong>required</strong>
+                                <mat-error *ngIf="hasError('StartDate', 'required')">Start Date
+                                    <strong>required</strong>
                                 </mat-error>
-        
+
                             </mat-form-field>
                         </div>
                     </div>
@@ -59,25 +62,27 @@
                                 <mat-label>Choose end date</mat-label>
                                 <input matInput [matDatepicker]="picker" formControlName="EndDate"
                                        (dateChange)="comparisonEnddateValidator()" autocomplete="off">
-        
+
                                 <mat-datepicker-toggle matSuffix [for]="picker"></mat-datepicker-toggle>
                                 <mat-datepicker #picker></mat-datepicker>
-        
+
                                 <mat-error *ngIf="FilterForm.controls['EndDate'].hasError('invaliddaterange')">
                                     <strong>End date cannot be earlier than start date</strong>
                                 </mat-error>
-        
+
                                 <mat-error *ngIf="hasError('EndDate', 'required')">End Date <strong>required</strong>
                                 </mat-error>
                             </mat-form-field>
                         </div>
                     </div>
-        
+
                 </div>
                 <div class="row pb-2">
                     <div class="col-lg-4 col-sm-12">
                         <div class="flex flex-shrink-0 items-center mt-6 sm:mt-0">
-                            <button data-bs-toggle="collapse" data-bs-target="#collapseExample" aria-expanded="false" aria-controls="collapseExample" mat-raised-button class="mat-focus-indicator mat-flat-button mat-button-base mat-primary"
+                            <button data-bs-toggle="collapse" data-bs-target="#collapseExample" aria-expanded="false"
+                                    aria-controls="collapseExample" mat-raised-button
+                                    class="mat-focus-indicator mat-flat-button mat-button-base mat-primary"
                                     type="button" (click)="loadApiLogs()">
                                 <mat-icon class="mr-2">search</mat-icon>
                                 Search
@@ -87,8 +92,7 @@
                 </div>
             </div>
         </div>
-      </div>
-
+    </div>
 
 
     <!-- <mat-accordion class="py-3">
@@ -99,12 +103,12 @@
               Advance Filter
             </mat-panel-title>
           </mat-expansion-panel-header>
-          
-          
-     
+
+
+
         </mat-expansion-panel>
       </mat-accordion> -->
-    
+
 
     <section matSort class="mat-elevation-z2 mat-header-row bg-green">
         <span class="mat-header-cell text-white" mat-sort-header="Id" style="width: 10px;">ID</span>
@@ -118,13 +122,19 @@
 
 
         <mat-expansion-panel class="api-table shadow-none mb-4 p-0" *ngFor="let item of displayedRows$ |async"
-                             (click)="fetch3rdAPI($event,item)" style="box-shadow: none !important; margin-bottom: 5px !important; font-size: 12px;">
-            <mat-expansion-panel-header style="font-size: 12px;" class="mat-row custom-accordion py-2 h-10  rounded-lg my-1 shadow border">
-                <span class="mat-cell py-6 self-center font-bold" style="width: 10px; font-size: 12px;">{{item?.Id}}</span>
-                <span class="mat-cell py-6 self-center font-bold" style="font-size: 12px;">{{item?.TransactionId}}</span>
+                             (click)="fetch3rdAPI($event,item)"
+                             style="box-shadow: none !important; margin-bottom: 5px !important; font-size: 12px;">
+            <mat-expansion-panel-header style="font-size: 12px;"
+                                        class="mat-row custom-accordion py-2 h-10  rounded-lg my-1 shadow border">
+                <span class="mat-cell py-6 self-center font-bold"
+                      style="width: 10px; font-size: 12px;">{{item?.Id}}</span>
+                <span class="mat-cell py-6 self-center font-bold"
+                      style="font-size: 12px;">{{item?.TransactionId}}</span>
                 <p class="mat-cell py-6 self-center  font-bold" style="font-size: 12px;">{{item?.APIName}}</p>
-                <span class="mat-cell py-6 self-center px-2 font-bold" style="font-size: 12px;">{{item?.CallDateTime | date}}</span>
-                <span class="mat-cell py-6 self-center px-2 font-bold " style="font-size: 12px;">{{item?.TotalTimeTaken}}</span>
+                <span class="mat-cell py-6 self-center px-2 font-bold"
+                      style="font-size: 12px;">{{item?.CallDateTime | date}} {{item?.CallDateTime | date:'shortTime'}}</span>
+                <span class="mat-cell py-6 self-center px-2 font-bold "
+                      style="font-size: 12px;">{{item?.TotalTimeTaken}}</span>
                 <span class="mat-cell py-6 self-center">
                     <button mat-icon-button color="primary" (click)="viewRequestResponse($event,item)">
                                             <mat-icon title="View">visibility</mat-icon>
@@ -140,7 +150,6 @@
                             <th>Transaction ID</th>
                             <th>API Name</th>
                             <th>Call Date Time</th>
-                            <th>Response Date Time</th>
                             <th>Total Time Taken</th>
                             <th>Action</th>
                         </tr>
@@ -150,13 +159,12 @@
                             <td>{{tp_item?.Id}}</td>
                             <td>{{tp_item?.TransactionId}}</td>
                             <td>{{tp_item?.APIName}}</td>
-                            <td>{{tp_item?.CallDateTime}}</td>
-                            <td>{{tp_item?.ResponseDateTime}}</td>
-                            <td>{{tp_item?.TotalTimeTaken}}</td>
+                            <td>{{tp_item?.CallDateTime | date}}</td>
+                            <td>{{tp_item?.CallDateTime | date}} {{tp_item?.CallDateTime | date:'shortTime'}}</td>
                             <td>
                                 <button mat-icon-button color="primary"
                                         (click)="viewRequestResponse($event,tp_item,true)">
-                                    <mat-icon  style="color: black;" title="View">visibility</mat-icon>
+                                    <mat-icon style="color: black;" title="View">visibility</mat-icon>
                                 </button>
                             </td>
                         </tr>
