--- a/src/app/modules/customer/authorized-customers/authorized-customers.component.html
+++ b/src/app/modules/customer/authorized-customers/authorized-customers.component.html
@@ -3,8 +3,8 @@
 
 
   <div class="row py-3">
-    <div class="col-lg-8 col-sm-12">
-        <div class="text-3xl   font-extrabold tracking-tight border-b" style="width: fit-content;">Authorized Customer</div>
+    <div class="col-lg-12 col-sm-12">
+        <div class="heading">Authorized Customer</div>
     </div>
 
 </div>
