--- a/src/app/modules/loan-recovery/recovery-form/recovery-form.component.html
+++ b/src/app/modules/loan-recovery/recovery-form/recovery-form.component.html
@@ -451,7 +451,7 @@
           [disabled]="submitted || viewOnly || ibDisSave" *ngIf="isEditMode || dataSaved"><mat-icon class="mr-2">delete_forever</mat-icon>Delete</button>
 
 
-        <button mat-raised-button  class="ml-2 mat-focus-indicator shadow-md btn bg-red-500 text-white rounded-md mx-2 mat-raised-button mat-button-base mat-danger" (click)="clearForm()"
+        <button mat-raised-button  class="ml-2 mat-focus-indicator  btn bg-red-500 text-white rounded-md mx-2 mat-raised-button mat-button-base mat-danger" (click)="clearForm()"
           [disabled]="submitted || transactionEdit || viewOnly || dataSaved"><mat-icon class="mr-2"> clear_all</mat-icon>Clear</button>
 
 
