--- a/src/app/modules/loan/cl-securities/cl-securities.component.html
+++ b/src/app/modules/loan/cl-securities/cl-securities.component.html
@@ -64,7 +64,7 @@
             <button style="background-color: #01671B;" type="button" [disabled]="isSecuritiesFormInProgress" class="btn btn-primary" mat-raised-button color="primary" (click)="onSaveLoanSecurities()">
               <mat-icon class="mr-2">save</mat-icon> Save
             </button>
-            <button type="button" class="mat-focus-indicator shadow-md btn bg-red-500 text-white rounded-md mx-2 mat-raised-button mat-button-base mat-danger" mat-raised-button color="danger" (click)="clearLoanSecuritiesForm()" >
+            <button type="button" class="mat-focus-indicator btn bg-red-500 text-white rounded-md mx-2 mat-raised-button mat-button-base mat-danger" mat-raised-button color="danger" (click)="clearLoanSecuritiesForm()" >
               <mat-icon class="mr-2"> clear_all</mat-icon>Clear
             </button>
           </div>
