--- a/src/app/modules/reschedule-cases/make-reschedule/new-gl-code/new-gl-code.component.html
+++ b/src/app/modules/reschedule-cases/make-reschedule/new-gl-code/new-gl-code.component.html
@@ -16,7 +16,7 @@
         </div>
         <div class="col-lg-4 col-sm-12 self-center">
             <p class="text-right">
-                <button mat-raised-button  class="mat-focus-indicator shadow-md btn bg-red-500 text-white rounded-md mat-raised-button mat-button-base mat-danger"
+                <button mat-raised-button  class="mat-focus-indicator btn bg-red-500 text-white rounded-md mat-raised-button mat-button-base mat-danger"
                 (click)="onCloseClick()">
             <mat-icon>close</mat-icon>
         </button>
@@ -321,7 +321,7 @@
                 <div class="row text-center">
                     <div class="col-lg-12 text-right">
                         <!-- <button mat-raised-button color="primary">Submit</button>&nbsp;&nbsp; -->
-                        <button type="button" class="mat-focus-indicator shadow-md btn bg-red-500 text-white rounded-md  mat-raised-button mat-button-base mat-danger" mat-raised-button cdkFocusInitial
+                        <button type="button" class="mat-focus-indicator btn bg-red-500 text-white rounded-md  mat-raised-button mat-button-base mat-danger" mat-raised-button cdkFocusInitial
                                 (click)="onCloseClick()">
                                 <mat-icon class="mr-2">cancel</mat-icon>Close
                         </button>
