--- a/src/app/modules/user-management/Role/role-list/role-list.component.html
+++ b/src/app/modules/user-management/Role/role-list/role-list.component.html
@@ -4,10 +4,10 @@
 
 
     <div class="row py-3">
-        <div class="col-lg-8 col-sm-12">
-            <div class="text-3xl   font-extrabold tracking-tight border-b" style="width: fit-content;">Roles list</div>
+        <div class="col-lg-10 col-sm-12">
+            <div class="heading">Roles list</div>
         </div>
-        <div class="col-lg-4 col-sm-12 self-center">
+        <div class="col-lg-2 col-sm-12 self-center">
             <div class="row py-2">
                 <div class="col-lg-12 text-right">
                     <div class=" mt-6 sm:mt-0">
