--- a/src/app/modules/user-management/activity/activity-list/activity-list.component.html
+++ b/src/app/modules/user-management/activity/activity-list/activity-list.component.html
@@ -4,10 +4,10 @@
 
 
     <div class="row py-3">
-        <div class="col-lg-8 col-sm-12">
-            <div class="text-3xl   font-extrabold tracking-tight border-b" style="width: fit-content;">Pages List</div>
+        <div class="col-lg-10 col-sm-12">
+            <div class="heading">Pages List</div>
         </div>
-        <div class="col-lg-4 col-sm-12 text-right">
+        <div class="col-lg-2 col-sm-12 text-right mt-3">
             <div class="">
                 <button
                     class="ml-4"
