--- a/src/app/modules/configuration-management/document-type-edit/document-type-edit.component.html
+++ b/src/app/modules/configuration-management/document-type-edit/document-type-edit.component.html
@@ -31,7 +31,7 @@
                 <div class="kt-form__actions kt-form__actions--solid">
                     <div class="row">
                         <div class="col-lg-12 text-right">
-                            <button type="button" class="mat-focus-indicator shadow-md btn bg-red-500 text-white rounded-md mx-2 mat-raised-button mat-button-base mat-danger" mat-raised-button [mat-dialog-close]="data.animal"
+                            <button type="button" class="mat-focus-indicator btn bg-red-500 text-white rounded-md mx-2 mat-raised-button mat-button-base mat-danger" mat-raised-button [mat-dialog-close]="data.animal"
                                     cdkFocusInitial>
                                     <mat-icon class="mr-2">cancel</mat-icon> Cancel
                             </button>&nbsp;
