--- a/src/app/modules/customer/pending-customers/pending-customers.component.html
+++ b/src/app/modules/customer/pending-customers/pending-customers.component.html
@@ -4,7 +4,7 @@
 
   <div class="row py-3">
     <div class="col-lg-8 col-sm-12">
-        <div class="text-3xl   font-extrabold tracking-tight border-b" style="width: fit-content;">Pendings Customer</div>
+        <div class="heading">Pendings Customer</div>
     </div>
   </div>
 
