--- a/src/app/modules/khaad-seed-vendor/add-new-vendor/add-new-vendor.component.html
+++ b/src/app/modules/khaad-seed-vendor/add-new-vendor/add-new-vendor.component.html
@@ -183,7 +183,7 @@
 
     <div class="mt-2 justify-content-center text-right border-t py-4" >
         <button style="background-color: #01671B;" mat-raised-button color="primary" (click)="saveSubmit()" *ngIf="!viewOnly" ><mat-icon class="mr-2">save</mat-icon>Save & Submit</button>
-        <button mat-raised-button color="primary" class="mat-focus-indicator shadow-md btn bg-red-500 text-white rounded-md mx-2 mat-raised-button mat-button-base mat-danger ml-2" (click)="deleteVendor()" *ngIf="isEdit" ><mat-icon class="mr-2">delete</mat-icon>Delete Vendor</button>
+        <button mat-raised-button color="primary" class="mat-focus-indicator btn bg-red-500 text-white rounded-md mx-2 mat-raised-button mat-button-base mat-danger ml-2" (click)="deleteVendor()" *ngIf="isEdit" ><mat-icon class="mr-2">delete</mat-icon>Delete Vendor</button>
     </div>
 
 </div>
