--- a/src/app/modules/land-creation/cust-land-information/cust-land-information.component.html
+++ b/src/app/modules/land-creation/cust-land-information/cust-land-information.component.html
@@ -261,7 +261,7 @@
             </table>
             <button class="py-2" mat-raised-button color="primary"  style="background-color: #01671B;"  type="button" (click)="saveCustomerLandInfo()"><mat-icon class="mr-2">save</mat-icon> Save
             </button>
-            <button mat-raised-button color="primary" type="button" class="ml-2 mat-focus-indicator shadow-md btn bg-red-500 text-white rounded-md mx-2 mat-raised-button mat-button-base mat-danger" (click)="clearSaveCustomerLandInfo()"
+            <button mat-raised-button color="primary" type="button" class="ml-2 mat-focus-indicator btn bg-red-500 text-white rounded-md mx-2 mat-raised-button mat-button-base mat-danger" (click)="clearSaveCustomerLandInfo()"
                     *ngIf="!isFormReadonly"><mat-icon class="mr-2"> clear_all</mat-icon>Clear
             </button>
         </div>
