--- a/src/app/modules/loan/cl-application-header/cl-application-header.component.html
+++ b/src/app/modules/loan/cl-application-header/cl-application-header.component.html
@@ -164,7 +164,7 @@
     <button style="background-color: #01671B;" [disabled]="isSaveApplicationHeaderInProgress" type="button" class="btn btn-primary" mat-raised-button color="primary" (click)="onSaveApplicationHeader()">
       <mat-icon class="mr-2">save</mat-icon> Save
     </button>
-    <button type="button" class="mat-focus-indicator shadow-md btn bg-red-500 text-white rounded-md mx-2 mat-raised-button mat-button-base mat-danger" mat-raised-button color="danger"  (click)="onClearSavApplicationHeader()" >
+    <button type="button" class="mat-focus-indicator btn bg-red-500 text-white rounded-md mx-2 mat-raised-button mat-button-base mat-danger" mat-raised-button color="danger"  (click)="onClearSavApplicationHeader()" >
       <mat-icon class="mr-2"> clear_all</mat-icon>Clear
     </button>
   </div>
