--- a/src/app/modules/loan/cl-legal-heirs/cl-legal-heirs.component.html
+++ b/src/app/modules/loan/cl-legal-heirs/cl-legal-heirs.component.html
@@ -96,7 +96,7 @@
             <button style="background-color: #01671B;" type="button" class="btn btn-primary" mat-raised-button color="primary" (click)="onSaveLegalHeirsForm()">
               <mat-icon class="mr-2">save</mat-icon> Save
             </button>
-            <button type="button" class="mat-focus-indicator shadow-md btn bg-red-500 text-white rounded-md mx-2 mat-raised-button mat-button-base mat-danger"  color="danger" (click)="onClearLegalHeirsForm()">
+            <button type="button" class="mat-focus-indicator btn bg-red-500 text-white rounded-md mx-2 mat-raised-button mat-button-base mat-danger"  color="danger" (click)="onClearLegalHeirsForm()">
               <mat-icon class="mr-2"> clear_all</mat-icon>Clear
             </button>
           </div>
