--- a/src/app/modules/report-managment/notification-detail/notification-detail.component.html
+++ b/src/app/modules/report-managment/notification-detail/notification-detail.component.html
@@ -19,7 +19,7 @@
 </agm-map>
 <div class="row pt-4 border-t ">
     <div class="col-lg-12 text-right">
-        <button type="button" class="mat-focus-indicator shadow-md btn bg-red-500 text-white rounded-md mx-2 mat-raised-button mat-button-base mat-danger" mat-raised-button cdkFocusInitial value="Cancel"
+        <button type="button" class="mat-focus-indicator  btn bg-red-500 text-white rounded-md mx-2 mat-raised-button mat-button-base mat-danger" mat-raised-button cdkFocusInitial value="Cancel"
         [mat-dialog-close]="false">
         Cancel
     </button>&nbsp;
