--- a/src/app/modules/user-management/users/circle-list/circle-list.component.html
+++ b/src/app/modules/user-management/users/circle-list/circle-list.component.html
@@ -3,12 +3,12 @@
   <!-- Header -->
 
   <div class="row py-3">
-    <div class="col-lg-6 col-sm-12">
-        <div class="text-3xl   font-extrabold tracking-tight border-b" style="width: fit-content;">Create Fense</div>
+    <div class="col-lg-7 col-sm-12">
+        <div class="heading">Create Fense</div>
     </div>
-    <div class="col-lg-6 col-sm-12 self-center">
+    <div class="col-lg-5 col-sm-12 self-center">
         <p class="text-right">
-          <button [routerLink]="['/user-management/viewCirclesfence']" class="mr-4" mat-flat-button [color]="'primary'">
+          <button [routerLink]="['/user-management/viewCirclesfence']" class="mr-4 bg-gray-500 rounded-md text-white" mat-flat-button >
             <mat-icon class="mr-2">visibility</mat-icon>View Map
           </button>
           <button class="  py-2 mat-focus-indicator mat-flat-button mat-button-base mat-primary" type="button" color="primary" data-bs-toggle="collapse" data-bs-target="#collapseExample" aria-expanded="false" aria-controls="collapseExample">
