--- a/src/app/modules/village-wise-bench-marking/get-village-bench-marking/remark-dialog/remark-dialog.component.html
+++ b/src/app/modules/village-wise-bench-marking/get-village-bench-marking/remark-dialog/remark-dialog.component.html
@@ -28,7 +28,7 @@
       </form>
       <div class="row">
         <div class="col-lg-4 text-right col-sm-12">
-          <button type="button" class="mat-focus-indicator shadow-md btn bg-red-500 text-white rounded-md mx-2 mat-raised-button mat-button-base mat-danger" mat-raised-button cdkFocusInitial
+          <button type="button" class="mat-focus-indicator  btn bg-red-500 text-white rounded-md mx-2 mat-raised-button mat-button-base mat-danger" mat-raised-button cdkFocusInitial
             value="Cancel" [mat-dialog-close]="false" (click)="close(0)">
             <mat-icon class="mr-2">cancel</mat-icon>Close
           </button>
@@ -61,7 +61,7 @@
     <div class="kt-form__actions kt-form__actions--solid  py-4 border-t">
         <div class="row text-right">
             <div class="col-lg-12">
-              <button type="button" class="mat-focus-indicator shadow-md btn bg-red-500 text-white rounded-md mx-2 mat-raised-button mat-button-base mat-danger" mat-raised-button cdkFocusInitial
+              <button type="button" class="mat-focus-indicator btn bg-red-500 text-white rounded-md mx-2 mat-raised-button mat-button-base mat-danger" mat-raised-button cdkFocusInitial
               value="Cancel" [mat-dialog-close]="false" (click)="close(0)">
               <mat-icon class="mr-2">cancel</mat-icon>Close
             </button>
