--- a/src/app/modules/dashboard/dashboard.component.html
+++ b/src/app/modules/dashboard/dashboard.component.html
@@ -1,10 +1,10 @@
-<div class="flex flex-col flex-auto min-w-0">
+<div class="flex flex-col flex-auto min-w-0 bg-white">
 
     <!-- Main -->
     <div class="flex-auto p-6 sm:p-10">
 
         <!-- CONTENT GOES HERE -->
-        <div class="h-400 min-h-400 max-h-400 border-2 border-dashed border-gray-300 rounded-2xl">
+        <div class="h-screen max-h-400 border-2 border-dashed border-gray-300 rounded-2xl">
             <div class="row">
                 <div class="container">
                     <img src="./assets/media/bg/Group 1.png" class="img-responsive" alt="Alternate Text"/>
