--- a/src/app/modules/tour-plan/search-tour-plan/search-tour-plan.component.html
+++ b/src/app/modules/tour-plan/search-tour-plan/search-tour-plan.component.html
@@ -162,7 +162,7 @@
     <!-- Header -->
     
     <div class="flex flex-auto mt-4" style="flex-direction: column;overflow-y: scroll">
-        <div class="example-table-container  border shadow rounded-md">
+        <div class="example-table-container">
 
 <!--           table -->
 
