--- a/src/app/modules/land-creation/area-converter/area-converter.component.html
+++ b/src/app/modules/land-creation/area-converter/area-converter.component.html
@@ -79,9 +79,9 @@
                 </div> -->
                 <div class="kt-portlet__foot kt-portlet__foot--fit kt-portlet__no-border">
                     <div class="kt-form__actions kt-form__actions--solid">
-                        <div class="row text-center">
-                            <div class="col-lg-12">
-                                <button type="button" class="mat-focus-indicator shadow-md btn bg-red-500 text-white rounded-md mx-2 mat-raised-button mat-button-base mat-danger" mat-raised-button cdkFocusInitial
+                        <div class="row">
+                            <div class="col-lg-12 text-right">
+                                <button type="button" class="mat-focus-indicator btn bg-red-500 text-white rounded-md mx-2 mat-raised-button mat-button-base mat-danger" mat-raised-button cdkFocusInitial
                                         value="Cancel" [mat-dialog-close]="false" (click)="onCloseClick()">
                                         <mat-icon class="mr-2">cancel</mat-icon>Close
                                 </button>
