--- a/src/app/modules/report-managment/exception-detail/exception-detail.component.html
+++ b/src/app/modules/report-managment/exception-detail/exception-detail.component.html
@@ -1,4 +1,4 @@
-<h3 class="text-3xl  mt-4  font-extrabold tracking-tight pb-2 border-b mb-2 border-green-500 p-2" style="background-color: #f6fcf8;">Error Log Details({{errorLogDetails.MethodName}})</h3>
+<h3 class="heading pt-4">Error Log Details({{errorLogDetails.MethodName}})</h3>
 
 <table class="table ">
     <thead class="bg-green">
