--- a/src/app/modules/report-managment/location-history/location-history.component.html
+++ b/src/app/modules/report-managment/location-history/location-history.component.html
@@ -5,10 +5,10 @@
 
 
     <div class="row py-3">
-        <div class="col-lg-8 col-sm-12">
-            <div class="text-3xl   font-extrabold tracking-tight border-b" style="width: fit-content;">Notification Logs</div>
+        <div class="col-lg-9 col-sm-12">
+            <div class="heading">Notification Logs</div>
         </div>
-        <div class="col-lg-4 col-sm-12 self-center">
+        <div class="col-lg-3 col-sm-12 self-center">
             <p class="text-right">
                 <button class="  py-2 mat-focus-indicator mat-flat-button mat-button-base mat-primary" type="button" color="primary" data-bs-toggle="collapse" data-bs-target="#collapseExample" aria-expanded="false" aria-controls="collapseExample">
                     <mat-icon class="mr-2">filter_list</mat-icon> Advance Filter
