--- a/src/app/modules/auth/sign-in/sign-in.component.html
+++ b/src/app/modules/auth/sign-in/sign-in.component.html
@@ -73,7 +73,7 @@
                     mat-flat-button
                     [color]="'primary'"
                     [disabled]="signInForm.disabled"
-                    (click)="signIn()">
+                    (click)="signIn()"><mat-icon class="mr-3">login</mat-icon>
                     <span *ngIf="!signInForm.disabled">
                         Sign in
                     </span>
