--- a/src/app/modules/land-creation/area-converter/area-converter.component.html
+++ b/src/app/modules/land-creation/area-converter/area-converter.component.html
@@ -1,7 +1,7 @@
 <div class="kt-portlet">
     <div class="kt-portlet__head kt-portlet__head__custom" id="list-header">
         <div class="kt-portlet__head-label">
-            <h3 class="text-3xl font-extrabold tracking-tight pb-2 border-b mb-2 border-green-500 p-2" style="background-color: #f6fcf8;">Area Convertor</h3>
+            <h3 class="heading">Area Convertor</h3>
         </div>
     </div>
     <!--<kt-customer-list></kt-customer-list>-->
