--- a/src/app/modules/land-creation/cust-land-information/cust-land-information.component.html
+++ b/src/app/modules/land-creation/cust-land-information/cust-land-information.component.html
@@ -123,8 +123,8 @@
                 </div>
             </div>
             <div class="col-lg-3 col-sm-12 text-center self-center">
-                <div class="cursor-pointer border bg-primary px-3 rounded-md flex self-center" (click)="AreaConvertor()">
-                    <img  class="cursor-pointer  w-10" src="../../../../../assets/media/icons/svg/Shopping/Calculator.svg"
+                <div class="cursor-pointer border bg-green h-10 mx-auto w-full place-content-center px-3 rounded-md flex" (click)="AreaConvertor()">
+                    <img  class="cursor-pointer  w-6" src="../../../../../assets/media/icons/svg/Shopping/Calculator.svg"
                          alt="Calculator" />
                     <p class="ml-2 mb-0 self-center">Area Convertor</p>
         
