--- a/src/app/modules/reschedule-cases/request-for-rl/request-for-rl.component.html
+++ b/src/app/modules/reschedule-cases/request-for-rl/request-for-rl.component.html
@@ -1,11 +1,11 @@
-+<div class="px-10 pt-4 sm:absolute sm:inset-0 flex flex-col flex-auto min-w-0 sm:overflow-hidden bg-card dark:bg-transparent">
++<div class="px-10  sm:absolute sm:inset-0 flex flex-col flex-auto min-w-0 sm:overflow-hidden bg-card dark:bg-transparent">
 
 
     <div class="row py-3">
-        <div class="col-lg-8 col-sm-12">
-            <div class="text-3xl   font-extrabold tracking-tight border-b" style="width: fit-content;">Request for Reschedulement of Loan Installment</div>
+        <div class="col-lg-9 col-sm-12">
+            <div class="heading">Request for Reschedulement of Loan Installment</div>
         </div>
-        <div class="col-lg-4 col-sm-12 self-center">
+        <div class="col-lg-3 col-sm-12 self-center">
             <p class="text-right">
                 <button class="  py-2 mat-focus-indicator mat-flat-button mat-button-base mat-primary" type="button" color="primary" data-bs-toggle="collapse" data-bs-target="#collapseExample" aria-expanded="false" aria-controls="collapseExample">
                     <mat-icon class="mr-2">filter_list</mat-icon> Advance Filter
@@ -194,7 +194,7 @@
     <div class="flex flex-auto " style="flex-direction: column; overflow-y: scroll">
         <table class="example-table-container">
             <thead>
-            <tr class="table-header-background">
+            <tr class="table-header-background p-5 ">
                 <th>LC#</th>
                 <th>Cnic</th>
                 <th>Customer Name</th>
