--- a/src/app/modules/khaad-seed-vendor/add-new-vendor/add-new-vendor.component.html
+++ b/src/app/modules/khaad-seed-vendor/add-new-vendor/add-new-vendor.component.html
@@ -1,8 +1,15 @@
 <div class=" px-10  sm:absolute sm:inset-0 flex flex-col flex-auto min-w-0 sm:overflow-scroll bg-card dark:bg-transparent">
-    <div class="text-3xl mt-4 font-extrabold tracking-tight pb-2 border-b mb-2 border-green-500 p-2" style="background-color: #f6fcf8;">Add New Vendor</div>
+
+
+  <div class="row py-3">
+    <div class="col-lg-12 col-sm-12">
+        <div class="heading">Add New Vendor</div>
+    </div>
+</div>
+
     <div  [formGroup]="vendorForm">
 
-      <div class="row mt-4 ">
+      <div class="row">
         <div class="col-lg-3 col-sm-12">
           <mat-form-field class="mat-form-field-fluid w-full" appearance="outline" *ngIf="single_zone">
             <mat-label class="customMatLabel">Zone</mat-label>
