--- a/src/app/modules/reschedule-cases/refer-back-reschedule-cases/refer-back-reschedule-cases.component.html
+++ b/src/app/modules/reschedule-cases/refer-back-reschedule-cases/refer-back-reschedule-cases.component.html
@@ -1,5 +1,10 @@
-<div class="sm:absolute sm:inset-0 flex flex-col flex-auto min-w-0 sm:overflow-hidden bg-card dark:bg-transparent">
-    <div class="text-4xl font-extrabold tracking-tight">List of Transactions</div>
+<div class=" px-10 sm:absolute sm:inset-0 flex flex-col flex-auto min-w-0 sm:overflow-hidden bg-card dark:bg-transparent">
+ 
+    <div class="row py-3">
+        <div class="col-lg-12 col-sm-12">
+            <div class="heading">List of Transactions</div>
+        </div>
+    </div>
     <div class="flex flex-auto" style="flex-direction: column;overflow-y: scroll">
         <mat-table class="example-table-container"
                    #table
